--- a/map.html
+++ b/map.html
@@ -2,69 +2,104 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>テーブルマップ</title>
+  <title>店舗テーブルマップ</title>
   <style>
     body {
       background-color: #f4f0e0;
       font-family: sans-serif;
     }
 
-    .table-area {
+    .map {
       display: grid;
-      grid-template-columns: repeat(4, auto);
-      gap: 40px;
-      padding: 30px;
+      grid-template-columns: repeat(8, 80px);
+      grid-auto-rows: 80px;
+      gap: 10px;
+      padding: 20px;
     }
 
     .table-container {
       position: relative;
-      width: 120px;
-      height: 120px;
+      width: 100%;
+      height: 100%;
     }
 
     .table {
-      width: 100px;
-      height: 100px;
+      width: 100%;
+      height: 100%;
       background-color: green;
+      border-radius: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       color: white;
       font-weight: bold;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin: auto;
-      border-radius: 10px;
+      font-size: 18px;
+    }
+
+    .occupied .table {
+      background-color: red;
     }
 
     .chair {
-      width: 20px;
-      height: 20px;
+      width: 15px;
+      height: 15px;
       background-color: #999;
       border-radius: 50%;
       position: absolute;
     }
 
-    /* 椅子の配置（上・右・下・左） */
-    .chair-top { top: -15px; left: 50%; transform: translateX(-50%); }
-    .chair-right { right: -15px; top: 50%; transform: translateY(-50%); }
-    .chair-bottom { bottom: -15px; left: 50%; transform: translateX(-50%); }
-    .chair-left { left: -15px; top: 50%; transform: translateY(-50%); }
+    /* 椅子の配置位置 */
+    .top { top: -10px; left: 50%; transform: translateX(-50%); }
+    .bottom { bottom: -10px; left: 50%; transform: translateX(-50%); }
+    .left { left: -10px; top: 50%; transform: translateY(-50%); }
+    .right { right: -10px; top: 50%; transform: translateY(-50%); }
 
-    /* 利用中なら赤にする */
-    .occupied .table {
-      background-color: red;
+    .top-left { top: -10px; left: 10px; }
+    .top-right { top: -10px; right: 10px; }
+    .bottom-left { bottom: -10px; left: 10px; }
+    .bottom-right { bottom: -10px; right: 10px; }
+
+    .label {
+      text-align: center;
+      font-size: 14px;
+      margin-top: 5px;
+    }
+
+    .wc {
+      background-color: #fff;
+      border: 2px solid #999;
+      text-align: center;
+      font-weight: bold;
+      line-height: 80px;
+    }
+
+    .staff {
+      background-color: #ddd;
+      text-align: center;
+      font-weight: bold;
+      writing-mode: vertical-rl;
+      line-height: 1.5;
     }
   </style>
 </head>
 <body>
-  <div class="table-area">
-    <div class="table-container occupied">
-      <div class="chair chair-top"></div>
-      <div class="chair chair-right"></div>
-      <div class="chair chair-bottom"></div>
-      <div class="chair chair-left"></div>
-      <div class="table">1</div>
-    </div>
-    <!-- 同様に他のテーブルもここに追加していきます -->
+  <div class="map">
+    <div class="wc" style="grid-column: 1 / span 2;">WC</div>
+    <div></div><div></div><div></div><div></div><div class="label" style="grid-column: 8;">入口</div>
+
+    <div class="table-container"><div class="chair left"></div><div class="chair right"></div><div class="table">1</div></div>
+    <div class="table-container"><div class="chair left"></div><div class="chair right"></div><div class="table">2</div></div>
+    <div></div><div></div><div class="table-container" style="grid-row: span 2;"><div class="chair top"></div><div class="chair bottom"></div><div class="table">6</div></div>
+    <div class="staff" style="grid-row: span 4; grid-column: span 1;">スタッフ</div>
+
+    <div class="table-container"><div class="chair left"></div><div class="chair right"></div><div class="table">3</div></div>
+    <div class="table-container"><div class="chair left"></div><div class="chair right"></div><div class="table">4</div></div>
+    <div></div><div></div><div class="table-container"><div class="chair top-left"></div><div class="chair top-right"></div><div class="chair bottom-left"></div><div class="chair bottom-right"></div><div class="table">7</div></div>
+
+    <div class="table-container" style="grid-column: 6;"><div class="chair top"></div><div class="chair bottom"></div><div class="chair left"></div><div class="chair right"></div><div class="table">5</div></div>
+    <div class="table-container"><div class="chair top"></div><div class="chair bottom"></div><div class="chair left"></div><div class="chair right"></div><div class="table">8</div></div>
+    <div class="table-container"><div class="chair top"></div><div class="chair bottom"></div><div class="chair left"></div><div class="chair right"></div><div class="table">9</div></div>
+    <div class="wc" style="grid-column: 8;">WC</div>
   </div>
 </body>
 </html>
