--- a/map.html
+++ b/map.html
@@ -2,203 +2,115 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>店内マップ</title>
-
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-
+  <title>店舗テーブル状況</title>
   <style>
     body {
+      background-color: #f5deb3;
       font-family: sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(to right, #c2e9fb, #a1c4fd);
     }
-
-    header {
-      background-color: #2c3e50;
-      color: white;
-    }
-
-    .header-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 20px;
-    }
-
-    nav {
+    .floor {
       display: grid;
-      grid-auto-flow: column;
-      background-color: #3498db;
-      text-align: center;
+      grid-template-columns: repeat(5, 1fr);
+      gap: 20px;
+      padding: 40px;
     }
-
-    nav a {
-      padding: 12px 0;
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-      border-right: 1px solid #fff;
-    }
-
-    nav a:last-child {
-      border-right: none;
-    }
-
-    nav a.active {
-      background-color: #1f618d;
-    }
-
-    .map-grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(3, 150px);
-      gap: 30px;
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 10px;
-    }
-
     .table {
+      position: relative;
+      width: 100px;
+      height: 100px;
+      background-color: green;
+      border-radius: 10px;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
+      color: white;
       font-weight: bold;
-      font-size: 1.2em;
-      border-radius: 10px;
-      border: 2px solid #444;
       transition: background-color 0.3s;
     }
-
-    .available {
-      background-color: #a8e6a2;
-    }
-
     .occupied {
-      background-color: #f8a5a5;
+      background-color: red !important;
     }
-
-    .chair-container {
-      display: flex;
-      gap: 6px;
-      margin-top: 8px;
-      flex-wrap: wrap;
-      justify-content: center;
+    .vacant {
+      background-color: green !important;
     }
-
-    .chair {
-      width: 25px;
-      height: 25px;
-      background-color: #555;
-      border-radius: 50%;
+    .label {
+      position: absolute;
+      bottom: -20px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 14px;
+      color: #333;
     }
   </style>
-
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-      authDomain: "qr-visitor-log.firebaseapp.com",
-      projectId: "qr-visitor-log",
-      storageBucket: "qr-visitor-log.appspot.com",
-      messagingSenderId: "304250341939",
-      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-    };
-
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-
-    const tableStatus = {};
-    const totalTables = 7;
-
-    function updateTableDisplay() {
-      for (let i = 1; i <= totalTables; i++) {
-        const elem = document.getElementById(`table-${i}`);
-        if (!elem) continue;
-
-        const count = tableStatus[i] || 0;
-
-        const chairsHTML = (i === 1) ? `
-          <div class="chair-container">
-            <div class="chair"></div>
-            <div class="chair"></div>
-            <div class="chair"></div>
-            <div class="chair"></div>
-          </div>` : '';
-
-        if (count > 0) {
-          elem.classList.remove("available");
-          elem.classList.add("occupied");
-          elem.innerHTML = `✕ ${i}番台${chairsHTML}`;
-        } else {
-          elem.classList.remove("occupied");
-          elem.classList.add("available");
-          elem.innerHTML = `◯ ${i}番台${chairsHTML}`;
-        }
-      }
-    }
-
-    function countVisitors(snapshot) {
-      const enterLog = {};
-      const exitLog = {};
-
-      for (let i = 1; i <= totalTables; i++) {
-        enterLog[i] = 0;
-        exitLog[i] = 0;
-      }
-
-      snapshot.forEach(doc => {
-        const data = doc.data();
-        const table = data.table;
-        const type = data.type;
-
-        if (!table || !type) return;
-
-        if (type === "enter") enterLog[table]++;
-        if (type === "exit") exitLog[table]++;
-      });
-
-      for (let i = 1; i <= totalTables; i++) {
-        tableStatus[i] = (enterLog[i] || 0) - (exitLog[i] || 0);
-      }
-
-      updateTableDisplay();
-    }
-
-    window.onload = () => {
-      db.collection("logs").onSnapshot(countVisitors);
-    };
-  </script>
 </head>
-
 <body>
-  <header>
-    <div class="header-bar">
-      <div class="header-title">店内管理システム</div>
-      <div class="header-links">
-        <a href="#">マニュアル</a>
-        <a href="#">ログアウト</a>
-      </div>
-    </div>
-    <nav>
-      <a href="index.html">ホーム</a>
-      <a href="map.html" class="active">店内マップ</a>
-      <a href="histogram.html">混雑状況可視化</a>
-      <a href="admin.html">待ち管理</a>
-    </nav>
-  </header>
+  <h1 style="text-align:center">店舗テーブル状況</h1>
+  <div class="floor">
+    <div class="table" data-table="1">1</div>
+    <div class="table" data-table="2">2</div>
+    <div class="table" data-table="3">3</div>
+    <div class="table" data-table="4">4</div>
+    <div class="table" data-table="5">5</div>
+    <div class="table" data-table="6">6</div>
+    <div class="table" data-table="7">7</div>
+    <div class="table" data-table="8">8</div>
+    <div class="table" data-table="9">9</div>
+    <div class="table" data-table="10">10</div>
+  </div>
 
-  <main>
-    <div class="map-grid">
-      <div id="table-1" class="table">読み込み中...</div>
-      <div id="table-2" class="table">読み込み中...</div>
-      <div id="table-3" class="table">読み込み中...</div>
-      <div id="table-4" class="table">読み込み中...</div>
-      <div id="table-5" class="table">読み込み中...</div>
-      <div id="table-6" class="table">読み込み中...</div>
-      <div id="table-7" class="table">読み込み中...</div>
-    </div>
-  </main>
+  <!-- Firebase SDK -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+    import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
+
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_AUTH_DOMAIN",
+      projectId: "YOUR_PROJECT_ID",
+      storageBucket: "YOUR_STORAGE_BUCKET",
+      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+      appId: "YOUR_APP_ID",
+      databaseURL: "YOUR_DB_URL"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+
+    function updateTableColors() {
+      const logsRef = ref(db, 'logs');
+
+      onValue(logsRef, (snapshot) => {
+        const logs = snapshot.val();
+        const latestStatus = {};
+
+        for (const key in logs) {
+          const { table, type, time } = logs[key];
+          if (!latestStatus[table] || latestStatus[table].time < time) {
+            latestStatus[table] = { type, time };
+          }
+        }
+
+        document.querySelectorAll('.table').forEach(tableDiv => {
+          const tableNum = tableDiv.getAttribute('data-table');
+          const status = latestStatus[tableNum];
+
+          tableDiv.classList.remove('occupied', 'vacant');
+
+          if (status) {
+            if (status.type === 'enter') {
+              tableDiv.classList.add('occupied');
+            } else {
+              tableDiv.classList.add('vacant');
+            }
+          } else {
+            tableDiv.classList.add('vacant');
+          }
+        });
+      });
+    }
+
+    updateTableColors();
+  </script>
 </body>
 </html>
+
