--- a/map.html
+++ b/map.html
@@ -157,7 +157,7 @@
     <div class="chair" style="top: 335px; left: 762px;"></div>
 
     <!--　縦棒-->
-    <div class="border3" style="top: 10px; left: 630px;"></div>
+    <div class="border3" style="top: 0px; left: 630px;"></div>
     <div class="border3" style="top: 160px; left: 630px;"></div>
     <div class="border3" style="top: 310px; left: 630px;"></div>
     <div class="border2" style="top: 450px; left: 630px;"></div>
@@ -176,6 +176,14 @@
     <div class="chair" style="top: 565px; left: 762px;" id="table6"></div>
 
 
+    <!-- テーブル6 -->
+    <div class="table" style="top: 470px; left: 480px;" id="table7">7</div>
+    <div class="chair" style="top: 485px; left: 460px;" id="table7"></div>
+    <div class="chair" style="top: 485px; left: 562px;" id="table7"></div>
+    <div class="chair" style="top: 525px; left: 460px;" id="table7"></div>
+    <div class="chair" style="top: 525px; left: 562px;" id="table7"></div>
+    <div class="chair" style="top: 565px; left: 460px;" id="table7"></div>
+    <div class="chair" style="top: 565px; left: 562px;" id="table7"></div>
 
 
     
